Use "Then" instead of "Thereafter"

--- a/translations/en.json
+++ b/translations/en.json
@@ -1,7 +1,7 @@
 {
   "LINE": "Line",
   "NEXT": "Next",
-  "UPCOMING": "Thereafter",
+  "UPCOMING": "Then",
   "TRACK": "Track",
   "NOW": "Now",
   "UNDEFINED": "-"
